# confu_json

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  ProjectOptions.cmake  README.md  conanfile.py  conanfile.txt
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
confu_json/: CMakeLists.txt  concept.hxx  confu_json.hxx  to_json.hxx  to_object.hxx  util.hxx
test/: CMakeLists.txt  combineToJsonAndToObject.cxx  constant.hxx  jsonToUserDefined.cxx  playground.cxx  toJsonHelper.cxx  userDefinedToJson.cxx
